RESOLVED FIXED100096
[BlackBerry] Web page renders at the wrong zoom level after viewport changes
https://bugs.webkit.org/show_bug.cgi?id=100096
Summary [BlackBerry] Web page renders at the wrong zoom level after viewport changes
Robin Cao
Reported 2012-10-23 02:30:09 PDT
Attachments
patch (2.60 KB, patch)
2012-10-23 02:53 PDT, Robin Cao
no flags
Robin Cao
Comment 1 2012-10-23 02:53:52 PDT
Rob Buis
Comment 2 2012-10-23 07:32:49 PDT
Comment on attachment 170101 [details] patch LGTM.
Charles Wei
Comment 3 2012-10-23 18:39:12 PDT
Comment on attachment 170101 [details] patch commit
WebKit Review Bot
Comment 4 2012-10-23 18:57:22 PDT
Comment on attachment 170101 [details] patch Clearing flags on attachment: 170101 Committed r132290: <http://trac.webkit.org/changeset/132290>
WebKit Review Bot
Comment 5 2012-10-23 18:57:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.