[BlackBerry] Web page renders at the wrong zoom level after viewport changes https://bugs.webkit.org/show_bug.cgi?id=100096

Patch by Robin Cao <robin.cao@torchmobile.com.cn> on 2012-10-23
Reviewed by Rob Buis.

Notify the client of the zoom level change before resuming screen updates.
Otherwise, the user interface thread may blit the content at the wrong
zoom level in some cases. This can also prevent potential flickering.

Reviewed internally by Arvid Nilsson.

PR #225741

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::zoomAboutPoint):
(BlackBerry::WebKit::WebPagePrivate::zoomBlock):

Canonical link: https://commits.webkit.org/118205@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132290 268f45cc-cd09-0410-ab3c-d52691b4dbfc